--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="triangle"></div>
-  <section id="wrapper">
+  <form id="wrapper">
     <section id="totals">
       <div class="formHeader">
         <h1>NEC LOAD CALCULATIONS</h1>
@@ -127,11 +127,11 @@
       </select>
       <div class="wrap">
         <input class="button" type=button value="Submit" onclick="submitClicked()" />
-        <input class="button" type=button value="Reset" onclick="resetClicked()" />
+        <input class="button" type=button value="Reset" onclick="window.location.reload();" />
       </div>
 
     </section>
-  </section>
+  </form>
 
   <footer>
     <h6>Designed by <i><a href="https://blackburndesignstudio.com/">BlackburnDesignStudio</a></i></h6>
