--- a/print.html
+++ b/print.html
@@ -51,6 +51,7 @@
           </span>A</b></p>
 
       <button id="printBtn" onclick="window.print()">Print</button>
+      <script id="print.js"></script>
 
     </div>
 
